--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin: 0;
         }
         </style>
-        <title>NZ Dazzle Blocks 2023</title>
+        <title></title>
     </head>
     <body>
         <h1>NZ Dazzle Blocks 2023</h1>
