--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </style>
         </head>
     <body>
-        <h1>NZ Dazzle Blocks 2023</h1>
+        <h1>NZ Dazzle Blocks</h1>
         <div id="map">
         </div>
         <div id="map">
