--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
             margin: 0;
         }
         </style>
-        </head>
+        <title></title>
+    </head>
     <body>
-        <h1>NZ Dazzle Blocks</h1>
-        <div id="map">
-        </div>
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
@@ -42,7 +40,7 @@
         }
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[-39.62300819081587,176.88626542561371],[-39.601195871570056,176.93321762067433]]);
+        }).fitBounds([[-39.62409044688833,176.88696512112563],[-39.60227783736828,176.9339182390895]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -205,16 +203,6 @@
         });
         bounds_group.addLayer(layer_Dazzleblocks_4);
         map.addLayer(layer_Dazzleblocks_4);
-            var title = new L.Control();
-            title.onAdd = function (map) {
-                this._div = L.DomUtil.create('div', 'info');
-                this.update();
-                return this._div;
-            };
-            title.update = function () {
-                this._div.innerHTML = '<h2>NZ Dazzle Blocks 2023</h2>';
-            };
-            title.addTo(map);
         var baseMaps = {};
         L.control.layers(baseMaps,{'<img src="legend/Dazzleblocks_4.png" /> Dazzle blocks': layer_Dazzleblocks_4,'<img src="legend/Blythboundary_3.png" /> Blyth boundary': layer_Blythboundary_3,"OpenStreetMap": layer_OpenStreetMap_2,"Google Maps": layer_GoogleMaps_1,"ESRI Imagery": layer_ESRIImagery_0,},{collapsed:false}).addTo(map);
         setBounds();
